Portfolio: refine Dictionary card (icon, link attrs, copy)

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       <a href="#skills">Skills</a>
       <a href="#education">Education</a>
       <a href="#certifications">Certifications</a>
-      <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="#portfolio">Projects</a>
       <a href="#achievements">Experience</a>
       <a href="#contact">Contact</a>
     </div>
@@ -179,7 +178,7 @@
                 <!-- Languages -->
                 <span class="skill-tag premium-tag lang-tag"><i class='bx bxl-python'></i> Python</span>
                 <span class="skill-tag premium-tag lang-tag"><i class='bx bxl-java'></i> Java</span>
-                <span class="skill-tag premium-tag lang-tag"><i class='bx bxl-c-plus-plus'></i> C++ / C</span>
+                <span class="skill-tag premium-tag lang-tag"><i class='bx bxl-c-plus-plus'></i>C</span>
 
                 <!-- Fundamentals -->
                 <span class="skill-tag premium-tag"><i class='bx bx-code-block'></i> Data Structures</span>
@@ -187,7 +186,6 @@
                 <span class="skill-tag premium-tag"><i class='bx bx-data'></i> DBMS & SQL</span>
                 <span class="skill-tag premium-tag"><i class='bx bx-layer'></i> OOPs Concepts</span>
                 <span class="skill-tag premium-tag"><i class='bx bx-terminal'></i> Operating Systems</span>
-                <span class="skill-tag premium-tag"><i class='bx bx-network-chart'></i> Computer Networks</span>
 
                 <!-- Tools & Tech -->
                 <span class="skill-tag premium-tag"><i class='bx bxl-git'></i> Git & GitHub</span>
@@ -376,7 +374,7 @@
               <div class="project-card h-100">
                 <div class="project-head">
                   <div class="folder-icon"><i class="bi bi-shop"></i></div>
-                  <a href="#" class="ext-link" aria-label="View Project"><i class="bi bi-box-arrow-up-right"></i></a>
+                  <a href="farmer-plant-marketplace.vercel.app" class="ext-link" aria-label="View Project"><i class="bi bi-box-arrow-up-right"></i></a>
                 </div>
                 <h3>Farmer Marketplace</h3>
                 <p>A full-stack platform connecting local farmers and plant buyers with discovery features.</p>
@@ -410,7 +408,7 @@
               <div class="project-card h-100">
                 <div class="project-head">
                   <div class="folder-icon"><i class="bi bi-key"></i></div>
-                  <a href="#" class="ext-link"><i class="bi bi-github"></i></a>
+                  <a href="https://secure-pass-coral.vercel.app/" class="ext-link"><i class="bi bi-github"></i></a>
                 </div>
                 <h3>SecurePass</h3>
                 <p>A security tool featuring password strength checking and text encryption tools.</p>
@@ -421,12 +419,26 @@
               </div>
             </div>
 
-            <!-- Project 4 -->
+          
+             <div class="col-md-6 col-xl-4 project-item" data-category="web">
+              <div class="project-card h-100">
+                <div class="project-head">
+                  <div class="folder-icon"><i class="bi bi-book"></i></div>
+                  <a href="https://dictionary-f4nc.onrender.com/" class="ext-link" target="_blank" rel="noopener noreferrer" aria-label="Open Dictionary project in new tab"><i class="bi bi-box-arrow-up-right"></i></a>
+                </div>
+                <h3>Dictionary</h3>
+                <p>A full-stack dictionary app with word definitions, user authentication, and a responsive UI.</p>
+                <div class="tech-stack mt-auto pt-3">
+                  <span>React</span>
+                </div>
+              </div>
+            </div>
+            <!-- Project 5 -->
             <div class="col-md-6 col-xl-4 project-item" data-category="web">
               <div class="project-card h-100">
                 <div class="project-head">
                   <div class="folder-icon"><i class="bi bi-file-code"></i></div>
-                  <a href="#" class="ext-link"><i class="bi bi-github"></i></a>
+                  <a href="https://thrinadh.vercel.app/" class="ext-link"><i class="bi bi-github"></i></a>
                 </div>
                 <h3>Personal Portfolio</h3>
                 <p>The site you're visiting! A high-performance portfolio with glassmorphism design.</p>
