--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               <div class="project-card h-100">
                 <div class="project-head">
                   <div class="folder-icon"><i class="bi bi-shop"></i></div>
-                  <a href="farmer-plant-marketplace.vercel.app" class="ext-link" aria-label="View Project"><i class="bi bi-box-arrow-up-right"></i></a>
+                  <a href="https://farmer-plant-marketplace.vercel.app" class="ext-link" target="_blank" rel="noopener noreferrer" aria-label="Open Farmer Marketplace in new tab"><i class="bi bi-box-arrow-up-right"></i></a>
                 </div>
                 <h3>Farmer Marketplace</h3>
                 <p>A full-stack platform connecting local farmers and plant buyers with discovery features.</p>
@@ -391,7 +391,7 @@
               <div class="project-card h-100">
                 <div class="project-head">
                   <div class="folder-icon"><i class="bi bi-clipboard-data"></i></div>
-                  <a href="#" class="ext-link"><i class="bi bi-github"></i></a>
+                  <a href="#" class="ext-link" aria-label="View project repository on GitHub"><i class="bi bi-github"></i></a>
                 </div>
                 <h3>Results System</h3>
                 <p>Automated academic management system for calculating CGPA and generating reports.</p>
@@ -408,7 +408,7 @@
               <div class="project-card h-100">
                 <div class="project-head">
                   <div class="folder-icon"><i class="bi bi-key"></i></div>
-                  <a href="https://secure-pass-coral.vercel.app/" class="ext-link"><i class="bi bi-github"></i></a>
+                  <a href="https://secure-pass-coral.vercel.app/" class="ext-link" target="_blank" rel="noopener noreferrer" aria-label="Open SecurePass in new tab"><i class="bi bi-github"></i></a>
                 </div>
                 <h3>SecurePass</h3>
                 <p>A security tool featuring password strength checking and text encryption tools.</p>
@@ -438,7 +438,7 @@
               <div class="project-card h-100">
                 <div class="project-head">
                   <div class="folder-icon"><i class="bi bi-file-code"></i></div>
-                  <a href="https://thrinadh.vercel.app/" class="ext-link"><i class="bi bi-github"></i></a>
+                  <a href="https://thrinadh.vercel.app/" class="ext-link" target="_blank" rel="noopener noreferrer" aria-label="Open Personal Portfolio in new tab"><i class="bi bi-github"></i></a>
                 </div>
                 <h3>Personal Portfolio</h3>
                 <p>The site you're visiting! A high-performance portfolio with glassmorphism design.</p>
