feat: theme-aware navbar; align Achievements layout; Projects label

--- a/index.html
+++ b/index.html
@@ -283,73 +283,8 @@
     </section>
 
 
-    <!-- Services Section -->
-    <section id="services">
-      <div class="container">
-        <div class="section-card">
-          <div class="section-head">
-            <div class="icon"><i class="bi bi-gear-wide-connected"></i></div>
-            <h2 class="heading">My <span>Services</span></h2>
-            <div class="section-line"></div>
-          </div>
-
-          <div class="row gy-4">
-            <div class="col-md-6 col-lg-3">
-              <div class="skill-card modern-skill-card h-100 p-4">
-                <i class='bx bx-lock-alt mb-3' style="font-size: 2.5rem; color: var(--accent);"></i>
-                <h3 class="h5">Cyber Security</h3>
-                <p style="color: var(--muted); font-size: 0.9rem;">Security audits, basic hardening, and awareness
-                  tooling to improve posture.</p>
-                <div class="tech-stack mt-auto pt-3">
-                  <span class="badge" style="background: rgba(0, 242, 254, 0.1); color: var(--accent);">Audits</span>
-                  <span class="badge" style="background: rgba(0, 242, 254, 0.1); color: var(--accent);">Hardening</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <div class="skill-card modern-skill-card h-100 p-4">
-                <i class='bx bx-code-alt mb-3' style="font-size: 2.5rem; color: var(--accent);"></i>
-                <h3 class="h5">Web Development</h3>
-                <p style="color: var(--muted); font-size: 0.9rem;">Building clean, responsive websites using modern
-                  technologies.</p>
-                <div class="tech-stack mt-auto pt-3">
-                  <span class="badge"
-                    style="background: rgba(0, 242, 254, 0.1); color: var(--accent);">Responsive</span>
-                  <span class="badge"
-                    style="background: rgba(0, 242, 254, 0.1); color: var(--accent);">Portfolios</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <div class="skill-card modern-skill-card h-100 p-4">
-                <i class='bx bxl-python mb-3' style="font-size: 2.5rem; color: var(--accent);"></i>
-                <h3 class="h5">Automation</h3>
-                <p style="color: var(--muted); font-size: 0.9rem;">Python-based automation scripts and data workflows to
-                  save time.</p>
-                <div class="tech-stack mt-auto pt-3">
-                  <span class="badge" style="background: rgba(0, 242, 254, 0.1); color: var(--accent);">Scripts</span>
-                  <span class="badge" style="background: rgba(0, 242, 254, 0.1); color: var(--accent);">Workflows</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <div class="skill-card modern-skill-card h-100 p-4">
-                <i class='bx bxl-visual-studio mb-3' style="font-size: 2.5rem; color: var(--accent);"></i>
-                <h3 class="h5">Software Setup</h3>
-                <p style="color: var(--muted); font-size: 0.9rem;">Environment configuration and productivity
-                  optimization.</p>
-                <div class="tech-stack mt-auto pt-3">
-                  <span class="badge" style="background: rgba(0, 242, 254, 0.1); color: var(--accent);">VS Code</span>
-                  <span class="badge" style="background: rgba(0, 242, 254, 0.1); color: var(--accent);">Git</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Portfolio Section -->
+   
+    <!-- Projects Section -->
     <section id="portfolio">
       <div class="container">
         <div class="section-card">
@@ -456,7 +391,8 @@
 
     <!-- Experience & Achievements Section -->
     <section id="achievements">
-      <div class="section-card">
+      <div class="container">
+        <div class="section-card">
         <div class="section-head">
           <div class="icon"><i class="bi bi-trophy-fill"></i></div>
           <h2 class="heading">Experience & <span>Achievements</span></h2>
@@ -495,6 +431,7 @@
             </li>
           </ul>
         </div>
+      </div>
       </div>
     </section>
 
